--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ lottie-player{
 <br>
 <br>
             <div class="btns">
-    <button style="background-color: rgb(245, 244, 244);">About</button>
+    <button style="background-color: rgb(245, 244, 244);">About Dev. </button>
     <h1 style="width: 100px;">         </h1>
     <button>Download <i  class="fa fa-download" ></i>
     </button>
