feedback form added

--- a/index.html
+++ b/index.html
@@ -392,9 +392,36 @@ lottie-player{
         <!-- <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div> -->
       </div>
 
+      <br>
+<br>
+    <h1>Feedback </h1>
+<br>
+
+
+
+<div class="box-div">
+    <div class="box">
+        <h2>Name:</h2>
+        <input class="form-control" type="text" placeholder="Enter your Name.." readonly>
+        <br>
+        <h2>Description</h2>
+        <textarea placeholder="Type your Feedback here.." class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <br>
+        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+
+    </div>
+</div>
+
+
 </div>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <style>
+    .box-div{
+       
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
       body{
             background-color: #0a192f;
             align-items: center;
@@ -402,6 +429,14 @@ lottie-player{
            margin: 0px;
            padding: 0px;
            color: #ffffff;
+        }
+        .box{
+            background-color: #05131e;
+            border-radius: 10px;
+            padding: 20px;
+
+            height: auto;
+        width: 400px;
         }
         
 /* width */
