--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@ lottie-player{
 <br>
 <br>
             <div class="btns">
-    <button style="background-color: rgb(245, 244, 244);">About Dev. </button>
+                <a href="https://akashmane21.github.io/Akash/">
+    <button style="background-color: rgb(245, 244, 244);">About Dev. </button></a>
     <h1 style="width: 50px;">         </h1>
     <button>Download <i  class="fa fa-download" ></i>
     </button>
