feedback form addeddddhjk

--- a/index.html
+++ b/index.html
@@ -423,10 +423,10 @@ lottie-player{
 
 </div>
 
-<footer class="bg-secondary text-white text-center" >
+<footer class="text-white text-center" style="width: 100%; padding: 0px;" >
     <div class="container p-4" style="background-color: #05131e;">
     
-     <div class="row" style="align-items: center; text-align: center;">
+     <div class="row" style="align-items: center; text-align: center; width: 100%; margin: 0px;">
      <img    src="https://github.com/Akashmane21/Akash/blob/main/Src/Imgs/dp/dp%20(3).jpg?raw=true" alt="" id="footerdp"/>
  
        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
@@ -475,6 +475,9 @@ lottie-player{
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <style>
+    a{
+        text-decoration: none;
+    }
     .row >img{
         width: 100px; height: auto; border-radius: 50%;
         align-items: center;
